@@ -138,7 +138,8 @@ The text you can display is very dynamic, you can use a multitude of different e
 The effects can be used like this:
 - \*Text between asterisks will blink\*
 - #Text between pound signs will shake#
-- \~Text between tildes will have rainbow colors\~
+- \~Text between tildes will move in a wave pattern\~
+- \^Text between carets will have rainbow colors\^
 
 Whereas commands are more elaborate and are used like this:
 - `{@pause 60}` Stops advancing the text for 60 frames.
