@@ -1,6 +1,7 @@
 UNRELEASED:
 - FIX: Fix text being displayed immediately after closing a dialog while it's still writing and reopening it
 - Make nameplate fit longer names
+- Separate wave and rainbow color effect into ~ for wave and ^ for rainbow color
 
 v0.7.3:
 - FIX: Spaces in chinese/japanese and maybe other languages would not display correctly
